--- a/Meeting Agenda App/Src/HomePage.fx.yaml
+++ b/Meeting Agenda App/Src/HomePage.fx.yaml
@@ -1232,11 +1232,9 @@ HomePage As screen:
                 );
                 Set(
                     varG_SelectedMeetingSPData,
-                    First(
-                        Filter(
-                            MeetingList,
-                            MeetingID = SelectedMeeting.Id
-                        )
+                    LookUp(
+                        MeetingList,
+                        MeetingID = SelectedMeeting.Id
                     )
                 );
                 ClearCollect(
