--- a/Certification App/Src/New Certifications request approval.fx.yaml
+++ b/Certification App/Src/New Certifications request approval.fx.yaml
@@ -3178,13 +3178,13 @@
 
     cert_Status_toggel As toggleSwitch:
         AccessibleLabel: ="cert_Status_toggel"
-        FalseText: ="Approved"
+        FalseText: ="Waiting for Approval"
         FontWeight: =FontWeight.Semibold
         Height: =22
         OnCheck: = ClearCollect(Cert_Req,Filter(FirstN(CertificationRequest,2000),Admin_Approval=true));
         OnUncheck: =ClearCollect(Cert_Req,Filter(FirstN(CertificationRequest,2000),Admin_Approval=false));
         Size: =10
-        TrueText: ="Waiting for Approval"
+        TrueText: ="Approved"
         Width: =206
         X: =1129
         Y: =145
