--- a/Certification App/Src/Ask_Oues_Ans_Admin.fx.yaml
+++ b/Certification App/Src/Ask_Oues_Ans_Admin.fx.yaml
@@ -1354,8 +1354,7 @@ Ask_Oues_Ans_Admin As screen:
                             BorderThickness: =0.2
                             Fill: =RGBA(255, 255, 255, 1)
                             Height: =450
-                            Items: |-
-                                =Search(Sort(Filter(AnswersList_Admin,'Question: ID'.Id=varSelectedQn_Admin.ID),Created,SortOrder.Descending),txtSearch_11.Text,"Title")
+                            Items: =Search(Sort(col_AnswersList_Admin,Created,SortOrder.Descending),txtSearch_18.Text,"Title")
                             Layout: =Layout.Vertical
                             TemplateSize: =144
                             Width: =290
